--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <main>
         <!-- About Me Pictures -->
         <section id="about-me-pictures">
-            <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\about me pictures\img3.jpg" alt="Image 1">
-            <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\about me pictures\img2.jpg" alt="Image 2">
-            <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\about me pictures\img4.jpg" alt="Image 3">
-            <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\about me pictures\img5.jpg" alt="Image 4">
+            <img src="pictures\projectpics\about me pictures\img3.jpg" alt="Image 1">
+            <img src="pictures\projectpics\about me pictures\img2.jpg" alt="Image 2">
+            <img src="pictures\projectpics\about me pictures\img4.jpg" alt="Image 3">
+            <img src="pictures\projectpics\about me pictures\img5.jpg" alt="Image 4">
         </section>
 
         <!-- About Me Header -->
@@ -53,8 +53,8 @@
                 <!-- Project 1 -->
                 <div class="project">
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Plastic Bottle Pics\project1.jpg" alt="Project Picture 1">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Plastic Bottle Pics\project2.jpg" alt="Project Picture 2">
+                        <img src="pictures\projectpics\Plastic Bottle Pics\project1.jpg" alt="Project Picture 1">
+                        <img src="pictures/projectpics/Plastic Bottle Pics/project2.jpg" alt="Project Picture 2">
                     </div>
                     <div class="project-info">
                         <h3>Plastic Bottle Recycling</h3>
@@ -62,16 +62,16 @@
                         <a href="project1.html">Learn More</a>
                     </div>
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Wind Turbine Pics\project1.jpg" alt="Project Picture 3">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Plastic Bottle Pics\project2.jpg" alt="Project Picture 4">
+                        <img src="pictures/projectpics/Plastic Bottle Pics/project3.jpg" alt="Project Picture 3">
+                        <img src="pictures/projectpics/Plastic Bottle Pics/project4.jpg" alt="Project Picture 4">
                     </div>
                 </div>
 
                 <!-- Project 2 -->
                 <div class="project">
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Wind Turbine Pics\project1.jpg" alt="Project Picture 1">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Wind Turbine Pics\project2.jpg" alt="Project Picture 2">
+                        <img src="pictures/projectpics/Wind Turbine Pics/project1.jpg" alt="Project Picture 1">
+                        <img src="pictures\projectpics\Wind Turbine Pics\project2.jpg" alt="Project Picture 2">
                     </div>
                     <div class="project-info">
                         <h3>Recycled Wind Turbine</h3>
@@ -79,16 +79,16 @@
                         <a href="project2.html">Learn More</a>
                     </div>
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Wind Turbine Pics\project3.jpg" alt="Project Picture 3">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Wind Turbine Pics\project4.jpg" alt="Project Picture 4">
+                        <img src="pictures/projectpics/Wind Turbine Pics/project3.jpg" alt="Project Picture 3">
+                        <img src="pictures/projectpics/Wind Turbine Pics/project4.jpg" alt="Project Picture 4">
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project">
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Donation Garden Pics\project1.jpeg" alt="Project Picture 1">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Donation Garden Pics\project2.jpg" alt="Project Picture 2">
+                        <img src="pictures\projectpics\Donation Garden Pics\project1.jpeg" alt="Project Picture 1">
+                        <img src="pictures/projectpics/Donation Garden Pics/project2.jpg" alt="Project Picture 2">
                     </div>
                     <div class="project-info">
                         <h3>Donation Garden</h3>
@@ -96,16 +96,16 @@
                         <a href="project3.html">Learn More</a>
                     </div>
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Donation Garden Pics\project3.jpeg" alt="Project Picture 3">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Donation Garden Pics\project4.jpg" alt="Project Picture 4">
+                        <img src="pictures\projectpics\Donation Garden Pics\project3.jpeg" alt="Project Picture 3">
+                        <img src="pictures/projectpics/Donation Garden Pics/project4.JPG" alt="Project Picture 4">
                     </div>
                 </div>
 
                 <!-- Project 4 -->
                 <div class="project">
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Water Wheel Pics\project1.jpg" alt="Project Picture 1">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Water Wheel Pics\project2.jpg" alt="Project Picture 2">
+                        <img src="pictures\projectpics\Water Wheel Pics\project1.jpg" alt="Project Picture 1">
+                        <img src="pictures\projectpics\Water Wheel Pics\project2.jpg" alt="Project Picture 2">
                     </div>
                     <div class="project-info">
                         <h3>Water Wheel</h3>
@@ -113,8 +113,8 @@
                         <a href="project4.html">Learn More</a>
                     </div>
                     <div class="project-images">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Water Wheel Pics\project3.jpg" alt="Project Picture 3">
-                        <img src="C:\Users\jlpm1\OneDrive\Desktop\Personal Website\Pictures\Water Wheel Pics\project4.jpg" alt="Project Picture 4">
+                        <img src="pictures\projectpics\Water Wheel Pics\project3.JPG" alt="Project Picture 3">
+                        <img src="pictures\projectpics\Water Wheel Pics\project4.jpg" alt="Project Picture 4">
                     </div>
                 </div>
             </div>
