--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <main>
         <!-- About Me Pictures -->
         <section id="about-me-pictures">
-            <img src="pictures\projectpics\about me pictures\img3.jpg" alt="Image 1">
-            <img src="pictures\projectpics\about me pictures\img2.jpg" alt="Image 2">
-            <img src="pictures\projectpics\about me pictures\img4.jpg" alt="Image 3">
-            <img src="pictures\projectpics\about me pictures\img5.jpg" alt="Image 4">
+            <img src="pictures/projectpics/about me pictures/img3.jpg" alt="Image 1">
+            <img src="pictures/projectpics/about me pictures/img2.jpg" alt="Image 2">
+            <img src="pictures/projectpics/about me pictures/img4.jpg" alt="Image 3">
+            <img src="pictures/projectpics/about me pictures/img5.jpg" alt="Image 4">
         </section>
 
         <!-- About Me Header -->
