project 1 page test1

--- a/project1.html
+++ b/project1.html
@@ -3,23 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recycling Plastic Bottles to 3D Printer Filament</title>
+    <title>Project Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Back to Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#project-details">Project Details</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Recycling Plastic Bottles to 3D Printer Filament</h1>
-        <p>This project focuses on tackling plastic waste by converting discarded plastic bottles into usable 3D printer filament. The process involves collecting, cleaning, and shredding plastic bottles, followed by melting and extruding the plastic into filament suitable for 3D printing.</p>
-        <p>More detailed information about this project will be added here, including technical details, challenges faced, and the impact of the project.</p>
+        <!-- YouTube Video Section -->
+        <section id="project-video">
+            <iframe width="100%" height="450" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <!-- Project Title -->
+        <section id="project-title">
+            <h1>Project Title</h1>
+        </section>
+
+        <!-- Section 1 -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Section 1 Header</h2>
+            </div>
+            <div class="section-content">
+                <div class="text-box">
+                    <p>Placeholder text for the first section. This is where the content related to the first section goes.</p>
+                </div>
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 2 -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Section 2 Header</h2>
+            </div>
+            <div class="section-content">
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Placeholder text for the second section. This is where the content related to the second section goes.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 3 -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Section 3 Header</h2>
+            </div>
+            <div class="section-content">
+                <div class="text-box">
+                    <p>Placeholder text for the third section. This is where the content related to the third section goes.</p>
+                </div>
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Jack Phillips - Marino</p
+        <p>&copy; 2024 Jack Phillips - Marino</p>
+    </footer>
+</body>
+</html>
