--- a/project1.html
+++ b/project1.html
@@ -19,7 +19,7 @@
     <main>
         <!-- YouTube Video Section -->
         <section id="project-video">
-            <iframe width="100%" height="450" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="450" src="https://www.youtube.com/live/8ElhQVUOmQA?si=C2oShA2WxMFngU_X" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <!-- Project Title -->
