--- a/project1.html
+++ b/project1.html
@@ -19,7 +19,7 @@
     <main>
         <!-- YouTube Video Section -->
         <section id="project-video">
-            <iframe width="100%" height="450" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/8ElhQVUOmQA?si=MDvjIuzOG0dVXN0y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8ElhQVUOmQA?si=b-nJEfRPBEUx8n57" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <!-- Project Title -->
