--- a/project1.html
+++ b/project1.html
@@ -27,14 +27,14 @@
             <h1>Project Title</h1>
         </section>
 
-        <!-- Section 1 -->
+        <!-- Introduction -->
         <section class="project-section">
             <div class="section-header">
-                <h2>Section 1 Header</h2>
+                <h2>Introduction</h2>
             </div>
             <div class="section-content">
                 <div class="text-box">
-                    <p>Placeholder text for the first section. This is where the content related to the first section goes.</p>
+                    <p>Placeholder text for the Introduction. This section will describe the objective and background of the project.</p>
                 </div>
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -42,35 +42,96 @@
             </div>
         </section>
 
-        <!-- Section 2 -->
+        <!-- Planning and Research -->
         <section class="project-section">
             <div class="section-header">
-                <h2>Section 2 Header</h2>
+                <h2>Planning and Research</h2>
             </div>
             <div class="section-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Placeholder text for the second section. This is where the content related to the second section goes.</p>
+                    <p>Placeholder text for Planning and Research. This section will describe the research and planning phases of the project.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Section 3 -->
+        <!-- Materials and Resources -->
         <section class="project-section">
             <div class="section-header">
-                <h2>Section 3 Header</h2>
+                <h2>Materials and Resources</h2>
             </div>
             <div class="section-content">
                 <div class="text-box">
-                    <p>Placeholder text for the third section. This is where the content related to the third section goes.</p>
+                    <p>Placeholder text for Materials and Resources. This section will describe the materials and resources used in the project.</p>
                 </div>
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
             </div>
         </section>
+
+        <!-- Execution -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Execution</h2>
+            </div>
+            <div class="section-content">
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Placeholder text for Execution. This section will describe the step-by-step process followed to complete the project.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Results -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Results</h2>
+            </div>
+            <div class="section-content">
+                <div class="text-box">
+                    <p>Placeholder text for Results. This section will describe the final product and its evaluation.</p>
+                </div>
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+            </div>
+        </section>
+
+        <!-- Reflection -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Reflection</h2>
+            </div>
+            <div class="section-content">
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Placeholder text for Reflection. This section will discuss what was learned from the project and its broader impact.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Conclusion -->
+        <section class="project-section">
+            <div class="section-header">
+                <h2>Conclusion</h2>
+            </div>
+            <div class="section-content">
+                <div class="text-box">
+                    <p>Placeholder text for Conclusion. This section will summarize the project and mention future steps.</p>
+                </div>
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
