new formatting for projects page

--- a/project1.html
+++ b/project1.html
@@ -27,104 +27,59 @@
             <h1>Project Title</h1>
         </section>
 
-        <!-- Introduction -->
+        <!-- Section 1 -->
         <section class="project-section">
-            <div class="section-content">
+            <div class="project-header">
+                <h2>Section 1 Header</h2>
+            </div>
+            <div class="project-content">
                 <div class="image-box">
-                    <h2>Introduction</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus faucibus eros eu odio volutpat, vitae auctor nunc consectetur. Nunc et nunc nec augue hendrerit malesuada at ac purus. Duis vel aliquet nunc. Integer quis ante sit amet urna luctus vestibulum. Integer a dictum lectus. Fusce sed urna a nisl vehicula suscipit. Nullam sit amet eros dapibus, finibus urna in, maximus velit. Sed aliquam euismod neque, et consectetur lectus. Nulla facilisi. Morbi sollicitudin justo vel nisl blandit, vitae pulvinar ligula iaculis. Aenean tincidunt, dui sed laoreet tempor, leo libero gravida velit, vitae facilisis ex orci non tortor. Morbi interdum nisl et dolor placerat, in dictum dui viverra. Pellentesque a gravida felis. Nulla ut vehicula est. Aenean interdum pharetra sem, ut tristique tortor laoreet ac. Curabitur vel est nec risus porta dapibus.</p>
-                    <p>Nam consectetur enim eget interdum euismod. Etiam venenatis malesuada massa. Vivamus feugiat felis sit amet libero blandit, ac suscipit lorem convallis. Integer quis nibh mi. In sagittis enim ut malesuada dictum. Donec convallis fringilla ligula, ut suscipit lacus ultrices ac. Nam interdum ante ut ligula tincidunt condimentum. Integer nec quam dolor. Phasellus sed libero ut risus volutpat viverra. Vestibulum scelerisque purus sit amet augue rhoncus, sed fermentum enim tincidunt. Nam vitae semper metus. Nam sit amet rutrum nunc, vel convallis dolor. Suspendisse potenti.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Planning and Research -->
-        <section class="project-section">
-            <div class="section-content">
-                <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod vehicula purus, vel elementum dui imperdiet vel. Suspendisse potenti. Curabitur ac velit ut libero cursus scelerisque. Sed condimentum erat sed dolor suscipit, nec facilisis mauris aliquet. Nam eget orci ac risus faucibus bibendum. Proin nec felis nec est fermentum ultrices. In lacinia risus vel nulla tempor tincidunt. Pellentesque luctus, odio sed laoreet hendrerit, sapien justo fringilla purus, ut fringilla risus dolor non sapien. Ut dapibus tortor et leo efficitur, a varius est laoreet. Curabitur rutrum dui ut est ultricies, a suscipit lectus pharetra.</p>
-                    <p>Ut ut convallis lorem. Nulla venenatis malesuada libero, sit amet fermentum ipsum vehicula sit amet. Integer in lacus eros. Praesent luctus orci justo, non pharetra lacus volutpat id. Etiam rutrum justo in massa dictum, ac viverra libero sollicitudin. In lacinia justo et sapien lobortis, id aliquam odio tempor. Etiam sed nulla quis nisi sagittis elementum eget nec eros. Cras interdum volutpat sapien, at auctor mauris convallis nec. Phasellus tincidunt orci sit amet tincidunt dictum. Aliquam non magna vel sem consectetur aliquet. Ut tincidunt varius mi, et feugiat enim sodales ut.</p>
+                    <p>Placeholder text for the first section. This is where the content related to the first section goes. Add more content here...</p>
                 </div>
                 <div class="image-box">
-                    <h2>Planning and Research</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
             </div>
         </section>
 
-        <!-- Materials and Resources -->
+        <!-- Section 2 -->
         <section class="project-section">
-            <div class="section-content">
+            <div class="project-header">
+                <h2>Section 2 Header</h2>
+            </div>
+            <div class="project-content">
                 <div class="image-box">
-                    <h2>Materials and Resources</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae lorem nec lacus tincidunt consectetur. Etiam id dignissim lorem, et consequat elit. Maecenas ac quam id sapien condimentum iaculis. Curabitur tincidunt, est et ullamcorper cursus, felis sapien vestibulum ante, sit amet vehicula ligula sapien in odio. Duis sollicitudin turpis ut massa dictum, non fermentum ex pharetra. Mauris pharetra purus vel turpis interdum bibendum. Nunc luctus sit amet dolor non finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris laoreet sollicitudin ligula, in maximus leo lobortis non. Praesent fringilla varius magna, sed viverra velit lobortis at.</p>
-                    <p>Pellentesque dictum urna in orci auctor, non ultricies orci posuere. Morbi sodales, lorem et feugiat ultrices, ligula ex blandit quam, at auctor magna sapien non metus. Nullam porta augue sed justo tincidunt, vitae suscipit nulla hendrerit. Vivamus fermentum libero ut odio facilisis, eget viverra turpis dignissim. Proin gravida interdum nisi. Nulla facilisi. Sed ut laoreet risus, ut convallis odio. Suspendisse potenti. Fusce feugiat libero et nulla lobortis, non posuere ligula viverra. Nullam rhoncus feugiat venenatis. Quisque sit amet venenatis felis, in accumsan justo. Integer vitae condimentum eros, vel fringilla nisi. Sed vel arcu massa. Ut nec nulla ut mi aliquet sodales nec in turpis.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Execution -->
-        <section class="project-section">
-            <div class="section-content">
-                <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse scelerisque, risus sed consectetur consequat, lacus sem aliquet erat, nec convallis lectus dolor nec est. Praesent vestibulum elit sit amet nulla gravida, at aliquam justo volutpat. Ut malesuada metus sed ipsum lobortis, in laoreet urna facilisis. Nam eget orci est. Fusce eget facilisis augue, ac ullamcorper ante. Fusce aliquet tristique lorem, nec tincidunt lectus vehicula ac. Donec vel diam eget dolor faucibus gravida at a risus. Donec porta nisi sit amet leo ornare, ut dignissim metus dictum. Curabitur pharetra eros nec sapien hendrerit, at vehicula libero cursus.</p>
-                    <p>Morbi at congue justo, ut laoreet justo. Vivamus in quam et odio pellentesque tempus. Integer ac ipsum mi. Fusce vitae ipsum vehicula, faucibus est ut, feugiat purus. Fusce nec magna arcu. Ut ut sapien metus. Vivamus scelerisque enim a purus bibendum, eget iaculis nunc facilisis. Praesent in venenatis erat, eget sollicitudin nulla. Sed a gravida arcu. In sit amet dui purus. Aliquam erat volutpat. Vestibulum vel eros nec tortor sollicitudin accumsan. In convallis lacus sit amet dui tincidunt, ac blandit turpis fringilla.</p>
+                    <p>Placeholder text for the second section. This is where the content related to the second section goes. Add more content here...</p>
                 </div>
                 <div class="image-box">
-                    <h2>Execution</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
             </div>
         </section>
 
-        <!-- Results -->
+        <!-- Section 3 -->
         <section class="project-section">
-            <div class="section-content">
+            <div class="project-header">
+                <h2>Section 3 Header</h2>
+            </div>
+            <div class="project-content">
                 <div class="image-box">
-                    <h2>Results</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu lectus non enim pretium consequat. Curabitur sit amet dui suscipit, tempor libero sed, feugiat ipsum. Integer vitae turpis urna. Quisque interdum, elit vel dapibus facilisis, arcu turpis venenatis tortor, non accumsan augue odio a nunc. Ut fermentum urna eu arcu sodales, in posuere lorem finibus. Nullam mollis eros in orci convallis, quis lacinia nunc auctor. Vivamus ut ex dapibus, lacinia eros ac, feugiat magna. Phasellus a leo ante. Pellentesque accumsan lorem ac varius varius. Vestibulum in leo sapien. Nunc vestibulum, elit id consectetur venenatis, est dui aliquam orci, in dignissim urna risus non ipsum.</p>
-                    <p>Integer non mollis sapien. Aliquam in libero nec metus fringilla hendrerit. Integer nec augue ipsum. Mauris vel ligula a dolor vehicula eleifend at eu turpis. Proin auctor magna a lacus ultricies, non eleifend ipsum tempus. Aenean eget eros consectetur, tempor lacus non, aliquam ex. Donec elementum justo non enim scelerisque, sit amet fermentum est iaculis. Fusce nec convallis lectus. Mauris eu turpis vitae libero tincidunt scelerisque at ac purus.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Reflection -->
-        <section class="project-section">
-            <div class="section-content">
-                <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam erat volutpat. Aenean sit amet posuere odio, ac fermentum eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut blandit erat ac suscipit posuere. Quisque bibendum, tortor sit amet auctor pellentesque, eros risus convallis risus, nec accumsan turpis est at justo. Nulla dapibus feugiat eros vel venenatis. Suspendisse facilisis auctor ex, vitae ullamcorper lacus dictum a. Phasellus aliquam ultricies sapien, eget hendrerit urna gravida ut. Integer malesuada condimentum ligula a vulputate. In a ligula vitae ligula pharetra aliquet. Sed vestibulum facilisis lacus, vel venenatis odio tincidunt non. Vestibulum fermentum orci a dictum cursus.</p>
-                    <p>Phasellus faucibus risus lectus, eu feugiat nulla aliquam eget. Curabitur vulputate, augue vel iaculis accumsan, felis dui dignissim justo, sed bibendum augue leo eget nulla. Nulla rutrum, nisl eu posuere bibendum, odio lectus efficitur magna, id fringilla mi mauris sed elit. Etiam placerat accumsan nunc, at tristique velit iaculis in. Aliquam ut ligula mi. Duis et lobortis sem. Cras sit amet leo urna. Donec gravida dolor sapien, a facilisis orci euismod nec. Aenean consectetur nulla sit amet dui maximus, at condimentum mi volutpat.</p>
+                    <p>Placeholder text for the third section. This is where the content related to the third section goes. Add more content here...</p>
                 </div>
                 <div class="image-box">
-                    <h2>Reflection</h2>
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
             </div>
         </section>
-
-        <!-- Conclusion -->
-        <section class="project-section">
-            <div class="section-content">
-                <div class="image-box">
-                    <h2>Conclusion</h2>
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis magna vitae elit porttitor, in ultricies purus fermentum. Fusce et ex sed tortor bibendum vulputate. Morbi faucibus, lorem sit amet fermentum viverra, ex urna pharetra sapien, ac lacinia lorem elit id dui. Fusce id mauris neque. Curabitur nec orci non ipsum sollicitudin ullamcorper. Vestibulum aliquet orci et velit maximus, a porttitor libero interdum. Phasellus rutrum ex vel orci finibus, in pharetra ex vehicula. Nunc sit amet velit ut eros posuere tempor ac sed eros.</p>
-                    <p>Maecenas dignissim, nisi in eleifend luctus, erat nisi volutpat orci, sit amet luctus urna metus in nisl. Proin eu elit ac lorem ullamcorper bibendum in at dui. Curabitur eget efficitur sapien. Phasellus consectetur nisi quis efficitur laoreet. Nulla aliquam, lectus vel suscipit vehicula, nulla turpis elementum ante, at facilisis sem erat at nisi. Ut sed ultricies est, a tincidunt augue. Nunc sed suscipit metus. Integer interdum lacus vel eros feugiat, id auctor mauris suscipit. Sed porta, sapien sed consectetur varius, lectus magna dictum est, at fringilla libero erat id risus.</p>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <footer>
