fixing styling and updating headers

--- a/project1.html
+++ b/project1.html
@@ -27,56 +27,75 @@
             <h1>Project Title</h1>
         </section>
 
-        <!-- Section 1 -->
+        <!-- Sections -->
         <section class="project-section">
-            <div class="project-header">
-                <h2>Section 1 Header</h2>
-            </div>
+            <div class="project-header">Introduction</div>
             <div class="project-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Placeholder text for the first section. This is where the content related to the first section goes. Add more content here...</p>
-                </div>
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                    <p>Introduction content goes here...</p>
                 </div>
             </div>
         </section>
 
-        <!-- Section 2 -->
         <section class="project-section">
-            <div class="project-header">
-                <h2>Section 2 Header</h2>
-            </div>
+            <div class="project-header">Planning + Research</div>
             <div class="project-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Placeholder text for the second section. This is where the content related to the second section goes. Add more content here...</p>
-                </div>
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                    <p>Planning and research content goes here...</p>
                 </div>
             </div>
         </section>
 
-        <!-- Section 3 -->
         <section class="project-section">
-            <div class="project-header">
-                <h2>Section 3 Header</h2>
-            </div>
+            <div class="project-header">Materials</div>
             <div class="project-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
-                    <p>Placeholder text for the third section. This is where the content related to the third section goes. Add more content here...</p>
+                    <p>Materials content goes here...</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="project-section">
+            <div class="project-header">Execution</div>
+            <div class="project-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Execution content goes here...</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="project-section">
+            <div class="project-header">Results</div>
+            <div class="project-content">
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Results content goes here...</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="project-section">
+            <div class="project-header">Conclusion</div>
+            <div class="project-content">
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
+                <div class="text-box">
+                    <p>Conclusion content goes here...</p>
                 </div>
             </div>
         </section>
